Rest refactoring as per bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=294774